static map update

--- a/microservices/app/src/templates/index.html
+++ b/microservices/app/src/templates/index.html
@@ -14,6 +14,13 @@
             Make changes at <code>microservices/app/src/server.py</code> and <code>git push</code> to deploy.
             <br/>
             <br/>
+            <iframe
+              width="600"
+              height="450"
+              frameborder="0" style="border:0"
+              src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCmhYiSK8JgigmskxIU2uC3xw8Zk-TNbIw
+                &q=Space+Needle,Seattle+WA" allowfullscreen>
+            </iframe>
             <h3>Backend examples</h3>
             <hr/>
             <a href="/examples/data">/examples/data</a>:<br/>
