--- a/microservices/app/src/templates/index.html
+++ b/microservices/app/src/templates/index.html
@@ -2,57 +2,64 @@
 <html>
     <head>
         <title>Hello world - Python Flask</title>
+        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <style>
             body {font-family: sans-serif; line-height: 23px;}
             code {color: #222; background: #f9f9f9;}
-            #map {
-                height: 400px;
-                width: 100%;
-               }
+            #map {height: 678px;width: 100%;}
         </style>
     </head>
     <body style="color: #333">
-        <div style="max-width: 800px; margin: 0 auto;">
-            Make changes at <code>microservices/app/src/server.py</code> and <code>git push</code> to deploy.
-            <br/>
-            <br/>
-            <form>
-                <input type="text" id="input" name="variable">
-                <br>
-                <button type="button" onClick="change();">CLICK</button>
-            </form>
-                <h3>My Google Maps Demo</h3>
+        <div style="max-width: fill;">
+            
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+              <a class="navbar-brand" href="index.html">BreakingBeariersLA</a>
+              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Features</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Pricing</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Disabled</a>
+                  </li>
+                </ul>
+              </div>
+                <div class=".container">
+                <button type="button" class="btn btn-primary">Sign Up</button>
+                <button type="button" class="btn btn-primary" style="margin-left:30px;">Log In</button>
+                </div>
+            </nav>
+
+            
                 <div id="map"></div>
             
                 <script async defer
                 src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCmhYiSK8JgigmskxIU2uC3xw8Zk-TNbIw&callback=initMap">
                 </script>
 
-            <h3>Backend examples</h3>
-            <hr/>
-            <a href="/examples/data">/examples/data</a>:<br/>
-            Flask code fetching data from postgres without an ORM.
-            <br/><br/>
-            <a href="/examples/auth">/examples/auth</a>:<br/>
-            Integrates with Hasura's auth UI kit to add login/signup functionality without any code.
-            Uses Hasura API gateway to checks if a user is logged in without any session-handling code.
-            <br/><br/>
-            <a href="/examples/filestore">/examples/filestore</a>:<br/>
-            Allow users to upload files without writing file-handling code.<br/>
+
         
         </div>
         
         <script>
           function initMap() {
-            var uluru = {lat: -25.363, lng: 131.044};
+            var coord = {lat: 34.047336, lng: -118.339229};
             var map = new google.maps.Map(document.getElementById('map'), {
-              zoom: 4,
-              center: uluru
+              zoom: 9,
+              center: coord
             });
+            /*
             var marker = new google.maps.Marker({
               position: uluru,
               map: map
             });
+            */
           }
         
          /* 
@@ -73,5 +80,6 @@
             });     
           }
         </script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     </body>
 </html>
