--- a/microservices/app/src/templates/index.html
+++ b/microservices/app/src/templates/index.html
@@ -5,29 +5,14 @@
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css?family=Raleway:Bold" rel="stylesheet">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script src="map2.js"></script>
+        <link href="main.css" rel="stylesheet">
 
         <style>
-            body {font-family: sans-serif; line-height: 23px;}
-            #map {height: 678px;width: 100%;}
-            nav {
-              margin-bottom: 20px;
-            }
 
-            .title {
-              margin-left: 20px;
-              font-family: "Raleway", sans-serif;
-            }
-
-            #translation {
-              border-radius: 10px;
-              box-shadow: 0 0 100px rgba(0,0,0,.1);
-              min-height: 300px;
-            }
             
 
         </style>
-      <script src="{{url_for('static', filename='map.js')}}"></script>
+      <script src="{{url_for('static', filename='map2.js')}}"></script>
 
     </head>
     <body >
@@ -72,7 +57,8 @@
                   </div>
                 </div>
                 <br>
-                <div class="row text-center" id="search" >
+                <!--<div class="row text-center" id="search" >-->
+                    <!--
                     <div class="col-sm" id="parkBtn" >
                     <button type="button" class="btn btn-primary btn-md-mr-4" onclick="find('parking')">Parking</button>
                     </div>
@@ -82,7 +68,16 @@
                     <div class="col-sm" id="hotelsBtn" >
                     <button type="button" class="btn btn-primary btn-md-mr-4" onclick="find('hotels')">Hotels</button>
                     </div>
-                </div>
+                    -->
+                    <!--Make sure the form has the autocomplete function switched off:-->
+                    <form autocomplete="off" onsubmit="return find();" action="">
+                     
+                          <div class="autocomplete" >
+                            <input  id="myInput" type="text" name="input" placeholder="Search Places...">
+                            <input type="submit">
+                          </div>
+                    </form>
+                <!--</div>-->
               </div>
               
               <script type="text/javascript">
@@ -140,5 +135,6 @@
         
         
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+        <script src="map2.js"></script>
     </body>
 </html>
