--- a/microservices/app/src/templates/index.html
+++ b/microservices/app/src/templates/index.html
@@ -67,7 +67,6 @@
                             <input type="submit">
                           </div>
                     </form>
-                <!--</div>-->
               </div>
 
               <script type="text/javascript">
@@ -125,6 +124,7 @@
 
 
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-        <script src="map2.js"></script>
+        <script src="map.js"></script>
+        
     </body>
 </html>
