--- a/microservices/app/src/templates/index.html
+++ b/microservices/app/src/templates/index.html
@@ -5,9 +5,8 @@
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css?family=Raleway:Bold" rel="stylesheet">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <link href="main.css" rel="stylesheet">
+        <link href= "{{ url_for('static',filename='styles/main.css') }}"   rel="stylesheet">
 
-      <script src="{{url_for('static', filename='map2.js')}}"></script>
 
     </head>
     <body >
@@ -124,7 +123,7 @@
 
 
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-        <script src="map.js"></script>
         
+        <script src="{{url_for('static', filename='map.js')}}"></script>
     </body>
 </html>
