final push switch position of jquery call

--- a/microservices/app/src/templates/index.html
+++ b/microservices/app/src/templates/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+Ω<!DOCTYPE html>
 <html>
     <head>
         <title>Hello world - Python Flask</title>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css?family=Raleway:Bold" rel="stylesheet">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <link href= "{{ url_for('static',filename='styles/main.css') }}"   rel="stylesheet">
 
 
@@ -37,7 +37,7 @@
                     <a href="https://auth.conductible49.hasura-app.io/ui/logout">
                         <button type="button" class="btn btn-secondary btn-md mr-4" style="margin-left:30px;">Logout</button>
                     </a>
-                  
+
                   </div>
               </nav>
 
@@ -60,7 +60,7 @@
                 <br>
 
                     <form autocomplete="off" onsubmit="return find();" action="">
-                     
+
                           <div class="autocomplete" >
                             <input  id="myInput" type="text" name="input" placeholder="Search Places...">
                             <input type="submit">
@@ -123,7 +123,7 @@
 
 
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-        
+
         <script src="{{url_for('static', filename='map.js')}}"></script>
     </body>
 </html>
