--- a/microservices/app/src/templates/index.html
+++ b/microservices/app/src/templates/index.html
@@ -18,15 +18,6 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                   <ul class="navbar-nav">
-                    <!-- <li class="nav-item">
-                      <a class="nav-link" href="#">Features</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">Pricing</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">Disabled</a>
-                    </li> -->
                   </ul>
                 </div>
                   <div class=".container pr-4">
@@ -80,7 +71,7 @@
                       <div id="map"></div>
 
                       <script async defer
-                      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCmhYiSK8JgigmskxIU2uC3xw8Zk-TNbIw&callback=initMap">
+                      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCmhYiSK8JgigmskxIU2uC3xw8Zk-TNbIw">
                       </script>
 
                       <div class="container  bg-1 mt-4 pt-3" id="translation">
