--- a/microservices/app/src/templates/index.html
+++ b/microservices/app/src/templates/index.html
@@ -8,6 +8,9 @@
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css?family=Raleway:Bold" rel="stylesheet">
         <link href= "{{ url_for('static',filename='styles/main.css') }}"   rel="stylesheet">
+        <script async defer
+                      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCmhYiSK8JgigmskxIU2uC3xw8Zk-TNbIw&callback=initMap">
+                      </script>
     </head>
     <body>
         <div class="container-fluid p-0">
@@ -70,9 +73,6 @@
               </script>
                       <div id="map"></div>
 
-                      <script async defer
-                      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCmhYiSK8JgigmskxIU2uC3xw8Zk-TNbIw">
-                      </script>
 
                       <div class="container  bg-1 mt-4 pt-3" id="translation">
                     <h4 class="title text-center">Learn their language! </h4>
