seperate the js file

--- a/microservices/app/src/templates/index.html
+++ b/microservices/app/src/templates/index.html
@@ -127,5 +127,6 @@
         <script async defer
                       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCmhYiSK8JgigmskxIU2uC3xw8Zk-TNbIw&callback=initMap">
                       </script>
+        <script src="../static/autocomplete.js"></script>
     </body>
 </html>
